--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171665">Unquantified</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    86 comments &nbsp;•&nbsp;
-                                    103.0 points
+                                    <a class="node" href="https://nomasters.io/posts/unquantified/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 10:31:44 &nbsp;•&nbsp;
+                                    50 comments &nbsp;•&nbsp;
+                                    104.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 21:31:24 &nbsp;•&nbsp;
                                     32 comments &nbsp;•&nbsp;
-                                    93.0 points
+                                    94.0 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                     <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    43 comments &nbsp;•&nbsp;
+                                    44 comments &nbsp;•&nbsp;
                                     90.0 points
                                 </span>
                             </td>
@@ -433,7 +433,7 @@
                                     <a class="node" href="https://www.scientificamerican.com/article/sewage-is-helping-cities-flush-out-the-opioid-crisis/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dustfinger">dustfinger</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:24:30 &nbsp;•&nbsp;
-                                    64 comments &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
                                     82.0 points
                                 </span>
                             </td>
@@ -554,7 +554,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 05:38:51 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
-                                    72.0 points
+                                    73.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 15:10:03.550662</strong>
+            <strong>Last update at 2018-05-29 15:20:04.598789</strong>
         </div>
     </div>
 </div>
