--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
                                 </span>
                             </td>
                         </tr>
@@ -266,6 +266,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
+                                    64 comments &nbsp;•&nbsp;
+                                    122.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172376">Introduction to Calculus (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -326,26 +346,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    61 comments &nbsp;•&nbsp;
-                                    116.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172016">Great white sharks go to places that were thought to be ocean deserts</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=privong">privong</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 12:18:08 &nbsp;•&nbsp;
                                     39 comments &nbsp;•&nbsp;
-                                    116.0 points
+                                    118.0 points
                                 </span>
                             </td>
                         </tr>
@@ -493,8 +493,8 @@
                                     <a class="node" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ejsp.2026">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmichulke">dmichulke</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 11:40:32 &nbsp;•&nbsp;
-                                    63 comments &nbsp;•&nbsp;
-                                    109.0 points
+                                    64 comments &nbsp;•&nbsp;
+                                    110.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171665">Unquantified</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    87 comments &nbsp;•&nbsp;
-                                    104.0 points
+                                    <a class="node" href="https://nomasters.io/posts/unquantified/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 10:31:44 &nbsp;•&nbsp;
+                                    50 comments &nbsp;•&nbsp;
+                                    105.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 15:30:03.651693</strong>
+            <strong>Last update at 2018-05-29 15:40:03.870963</strong>
         </div>
     </div>
 </div>
