--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
-                                    220.0 points
+                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
+                                    82 comments &nbsp;•&nbsp;
+                                    221.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 16:40:03.760136</strong>
+            <strong>Last update at 2018-05-29 16:50:04.912714</strong>
         </div>
     </div>
 </div>
