--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    220.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172524">Emacs 26.1 released</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -186,15 +206,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
-                                    81 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -226,15 +246,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
-                                    66 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
+                                    216 comments &nbsp;•&nbsp;
+                                    214.0 points
                                 </span>
                             </td>
                         </tr>
@@ -326,14 +346,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178031">High school physics course notes, with JavaScript simulations</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
-                                    203 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://landgreen.github.io/physics/index.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 11:10:46 &nbsp;•&nbsp;
+                                    22 comments &nbsp;•&nbsp;
                                     207.0 points
                                 </span>
                             </td>
@@ -435,26 +455,6 @@
                                     2018-05-22 18:47:54 &nbsp;•&nbsp;
                                     66 comments &nbsp;•&nbsp;
                                     201.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178031">High school physics course notes, with JavaScript simulations</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://landgreen.github.io/physics/index.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 11:10:46 &nbsp;•&nbsp;
-                                    22 comments &nbsp;•&nbsp;
-                                    200.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 16:40:03.760136</strong>
+            <strong>Last update at 2018-05-29 16:50:04.912714</strong>
         </div>
     </div>
 </div>
