--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -366,6 +366,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
+                                    82 comments &nbsp;•&nbsp;
+                                    231.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173960">America has a truck driver shortage</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -394,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 08:18:11 &nbsp;•&nbsp;
                                     64 comments &nbsp;•&nbsp;
-                                    228.0 points
+                                    229.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,35 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17145811">The Egg (2009)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.galactanet.com/oneoff/theegg_mod.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 16:45:22 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
+                                    225 comments &nbsp;•&nbsp;
                                     222.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
-                                    82 comments &nbsp;•&nbsp;
-                                    221.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 16:50:04.912714</strong>
+            <strong>Last update at 2018-05-29 17:00:05.336566</strong>
         </div>
     </div>
 </div>
