--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -293,8 +293,8 @@
                                     <a class="node" href="https://github.com/npm/npm/issues/20791">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 02:10:43 &nbsp;•&nbsp;
-                                    215 comments &nbsp;•&nbsp;
-                                    272.0 points
+                                    219 comments &nbsp;•&nbsp;
+                                    274.0 points
                                 </span>
                             </td>
                         </tr>
@@ -473,7 +473,7 @@
                                     <a class="node" href="https://jacquesmattheij.com/so-your-start-up-receive-the-nightmare-gdpr-letter">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 10:06:53 &nbsp;•&nbsp;
-                                    441 comments &nbsp;•&nbsp;
+                                    443 comments &nbsp;•&nbsp;
                                     253.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
-                                    153 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
+                                    87 comments &nbsp;•&nbsp;
                                     247.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 17:10:03.767831</strong>
+            <strong>Last update at 2018-05-29 17:20:03.851673</strong>
         </div>
     </div>
 </div>
