--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -74,7 +74,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165889">Improved Seam Carving Using Forward Energy</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -86,7 +86,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165889">Improved Seam Carving Using Forward Energy</a>
                                 </span>
                             </td>
                         </tr>
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179367">Read first pages of novels, and reveal the author and title if you're hooked</a>
+                                    <a href="https://news.ycombinator.com/item?id=17165845">Makita has made a sturdy coffee machine aimed at construction workers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.recommendmeabook.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 14:20:55 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
-                                    105.0 points
+                                    <a class="node" href="http://www.alphr.com/technology/1008859/makita-coffee-maker-drill-batteries">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 06:59:35 &nbsp;•&nbsp;
+                                    87 comments &nbsp;•&nbsp;
+                                    106.0 points
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 21:31:24 &nbsp;•&nbsp;
                                     32 comments &nbsp;•&nbsp;
-                                    96.0 points
+                                    97.0 points
                                 </span>
                             </td>
                         </tr>
@@ -326,6 +326,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17179651">Redis 5.0 RC1 is out</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://groups.google.com/forum/#!topic/redis-db/9FcwPtutyyQ">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 14:54:35 &nbsp;•&nbsp;
+                                    12 comments &nbsp;•&nbsp;
+                                    85.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17175135">An FPGA-based In-line Accelerator for Memcached (2013) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -395,26 +415,6 @@
                                     2018-05-28 10:24:30 &nbsp;•&nbsp;
                                     67 comments &nbsp;•&nbsp;
                                     83.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179651">Redis 5.0 RC1 is out</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://groups.google.com/forum/#!topic/redis-db/9FcwPtutyyQ">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 14:54:35 &nbsp;•&nbsp;
-                                    12 comments &nbsp;•&nbsp;
-                                    81.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 17:40:03.893232</strong>
+            <strong>Last update at 2018-05-29 17:50:03.905189</strong>
         </div>
     </div>
 </div>
