--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -186,14 +186,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172524">Emacs 26.1 released</a>
+                                    <a href="https://news.ycombinator.com/item?id=17145811">The Egg (2009)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 14:19:04 &nbsp;•&nbsp;
-                                    91 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.galactanet.com/oneoff/theegg_mod.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 16:45:22 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
                                     222.0 points
                                 </span>
                             </td>
@@ -206,15 +206,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17145811">The Egg (2009)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17179640">Mastodon 2.4.0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.galactanet.com/oneoff/theegg_mod.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 16:45:22 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
-                                    222.0 points
+                                    <a class="node" href="https://github.com/tootsuite/mastodon/releases/tag/v2.4.0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 14:53:37 &nbsp;•&nbsp;
+                                    84 comments &nbsp;•&nbsp;
+                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -275,26 +275,6 @@
                                     2018-05-26 16:49:54 &nbsp;•&nbsp;
                                     66 comments &nbsp;•&nbsp;
                                     218.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179640">Mastodon 2.4.0</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/tootsuite/mastodon/releases/tag/v2.4.0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 14:53:37 &nbsp;•&nbsp;
-                                    81 comments &nbsp;•&nbsp;
-                                    215.0 points
                                 </span>
                             </td>
                         </tr>
@@ -514,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 23:54:28 &nbsp;•&nbsp;
                                     193 comments &nbsp;•&nbsp;
-                                    197.0 points
+                                    198.0 points
                                 </span>
                             </td>
                         </tr>
@@ -535,6 +515,26 @@
                                     2018-05-25 14:14:48 &nbsp;•&nbsp;
                                     168 comments &nbsp;•&nbsp;
                                     196.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
+                                    114 comments &nbsp;•&nbsp;
+                                    193.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 18:10:03.940544</strong>
+            <strong>Last update at 2018-05-29 18:20:04.947012</strong>
         </div>
     </div>
 </div>
