--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 08:18:11 &nbsp;•&nbsp;
                                     65 comments &nbsp;•&nbsp;
-                                    230.0 points
+                                    231.0 points
                                 </span>
                             </td>
                         </tr>
@@ -273,8 +273,8 @@
                                     <a class="node" href="https://github.com/tootsuite/mastodon/releases/tag/v2.4.0">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:53:37 &nbsp;•&nbsp;
-                                    84 comments &nbsp;•&nbsp;
-                                    225.0 points
+                                    85 comments &nbsp;•&nbsp;
+                                    227.0 points
                                 </span>
                             </td>
                         </tr>
@@ -393,7 +393,7 @@
                                     <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 23:54:28 &nbsp;•&nbsp;
-                                    193 comments &nbsp;•&nbsp;
+                                    194 comments &nbsp;•&nbsp;
                                     198.0 points
                                 </span>
                             </td>
@@ -413,7 +413,7 @@
                                     <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    116 comments &nbsp;•&nbsp;
+                                    119 comments &nbsp;•&nbsp;
                                     194.0 points
                                 </span>
                             </td>
@@ -486,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17179367">Read first pages of novels, and reveal the author and title if you're hooked</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.recommendmeabook.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 14:20:55 &nbsp;•&nbsp;
+                                    41 comments &nbsp;•&nbsp;
+                                    178.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17165483">Toshiba’s loss of star engineer tells tale of company's decline</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -513,7 +533,7 @@
                                     <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:47 &nbsp;•&nbsp;
-                                    105 comments &nbsp;•&nbsp;
+                                    106 comments &nbsp;•&nbsp;
                                     174.0 points
                                 </span>
                             </td>
@@ -535,26 +555,6 @@
                                     2018-05-28 14:24:21 &nbsp;•&nbsp;
                                     115 comments &nbsp;•&nbsp;
                                     173.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days (2015)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    23 comments &nbsp;•&nbsp;
-                                    171.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 18:30:05.080655</strong>
+            <strong>Last update at 2018-05-29 18:40:04.807861</strong>
         </div>
     </div>
 </div>
