--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174697">Two Canadian banks say accounts compromised: CIBC 40,000 and BMO 50,000</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    65 comments &nbsp;•&nbsp;
-                                    135.0 points
+                                    <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 20:38:07 &nbsp;•&nbsp;
+                                    114 comments &nbsp;•&nbsp;
+                                    136.0 points
                                 </span>
                             </td>
                         </tr>
@@ -353,7 +353,7 @@
                                     <a class="node" href="https://galvez.github.io/plainbudget/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=jgalvez">jgalvez</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:20:48 &nbsp;•&nbsp;
-                                    75 comments &nbsp;•&nbsp;
+                                    76 comments &nbsp;•&nbsp;
                                     122.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 18:40:04.807861</strong>
+            <strong>Last update at 2018-05-29 18:50:04.179978</strong>
         </div>
     </div>
 </div>
