--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -446,15 +446,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17128413">The end of Iridium flares?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.heavens-above.com/IridiumDemise.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ColinWright">ColinWright</a></strong> &nbsp;•&nbsp;
-                                    2018-05-22 18:47:54 &nbsp;•&nbsp;
-                                    66 comments &nbsp;•&nbsp;
-                                    201.0 points
+                                    <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:54:28 &nbsp;•&nbsp;
+                                    194 comments &nbsp;•&nbsp;
+                                    199.0 points
                                 </span>
                             </td>
                         </tr>
@@ -475,26 +475,6 @@
                                     2018-05-28 04:29:07 &nbsp;•&nbsp;
                                     89 comments &nbsp;•&nbsp;
                                     199.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:54:28 &nbsp;•&nbsp;
-                                    194 comments &nbsp;•&nbsp;
-                                    198.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +513,7 @@
                                     <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    119 comments &nbsp;•&nbsp;
+                                    122 comments &nbsp;•&nbsp;
                                     194.0 points
                                 </span>
                             </td>
@@ -555,6 +535,26 @@
                                     2018-05-24 18:49:20 &nbsp;•&nbsp;
                                     319 comments &nbsp;•&nbsp;
                                     192.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17165532">Penniless Yogi Baba Ramdev Controls a Billion-Dollar Corporation</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 05:18:04 &nbsp;•&nbsp;
+                                    142 comments &nbsp;•&nbsp;
+                                    190.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 18:40:04.807861</strong>
+            <strong>Last update at 2018-05-29 18:50:04.179978</strong>
         </div>
     </div>
 </div>
