--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -173,7 +173,7 @@
                                     <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    23 comments &nbsp;•&nbsp;
+                                    24 comments &nbsp;•&nbsp;
                                     172.0 points
                                 </span>
                             </td>
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 02:06:27 &nbsp;•&nbsp;
                                     146 comments &nbsp;•&nbsp;
-                                    170.0 points
+                                    171.0 points
                                 </span>
                             </td>
                         </tr>
@@ -213,7 +213,7 @@
                                     <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 23:06:24 &nbsp;•&nbsp;
-                                    46 comments &nbsp;•&nbsp;
+                                    47 comments &nbsp;•&nbsp;
                                     166.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172092">Robust Clojure: The best way to handle nil</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181046">UTC Is Enough for Everyone, Right?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bsima.me/clog/robust-clojure-nil.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:38:31 &nbsp;•&nbsp;
-                                    80 comments &nbsp;•&nbsp;
-                                    137.0 points
+                                    <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:10:49 &nbsp;•&nbsp;
+                                    77 comments &nbsp;•&nbsp;
+                                    141.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 19:50:03.139852</strong>
+            <strong>Last update at 2018-05-29 20:00:03.555986</strong>
         </div>
     </div>
 </div>
