--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172092">Robust Clojure: The best way to handle nil</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://bsima.me/clog/robust-clojure-nil.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:38:31 &nbsp;•&nbsp;
+                                    80 comments &nbsp;•&nbsp;
+                                    137.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17174697">Two Canadian banks say accounts compromised: CIBC 40,000 and BMO 50,000</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -173,7 +193,7 @@
                                     <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 20:38:07 &nbsp;•&nbsp;
-                                    114 comments &nbsp;•&nbsp;
+                                    115 comments &nbsp;•&nbsp;
                                     136.0 points
                                 </span>
                             </td>
@@ -235,26 +255,6 @@
                                     2018-05-29 08:04:50 &nbsp;•&nbsp;
                                     111 comments &nbsp;•&nbsp;
                                     130.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181046">UTC Is Enough for Everyone, Right?</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 17:10:49 &nbsp;•&nbsp;
-                                    68 comments &nbsp;•&nbsp;
-                                    129.0 points
                                 </span>
                             </td>
                         </tr>
@@ -393,8 +393,8 @@
                                     <a class="node" href="https://groups.google.com/forum/#!topic/redis-db/9FcwPtutyyQ">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:54:35 &nbsp;•&nbsp;
-                                    17 comments &nbsp;•&nbsp;
-                                    118.0 points
+                                    20 comments &nbsp;•&nbsp;
+                                    119.0 points
                                 </span>
                             </td>
                         </tr>
@@ -453,7 +453,7 @@
                                     <a class="node" href="https://bugzilla.mozilla.org/1460069">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:32:46 &nbsp;•&nbsp;
-                                    55 comments &nbsp;•&nbsp;
+                                    56 comments &nbsp;•&nbsp;
                                     111.0 points
                                 </span>
                             </td>
@@ -473,7 +473,7 @@
                                     <a class="node" href="https://nomasters.io/posts/unquantified/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:31:44 &nbsp;•&nbsp;
-                                    57 comments &nbsp;•&nbsp;
+                                    58 comments &nbsp;•&nbsp;
                                     111.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 19:50:03.139852</strong>
+            <strong>Last update at 2018-05-29 20:00:03.555986</strong>
         </div>
     </div>
 </div>
