--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 17:37:51 &nbsp;•&nbsp;
                                     191 comments &nbsp;•&nbsp;
-                                    1282.0 points
+                                    1283.0 points
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=olifrost">olifrost</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 16:30:26 &nbsp;•&nbsp;
                                     139 comments &nbsp;•&nbsp;
-                                    558.0 points
+                                    561.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160518">Harvard Classics Book Download</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181269">Thousands of AI researchers are boycotting the new Nature journal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.myharvardclassics.com/categories/20120212">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kqr2">kqr2</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 06:18:38 &nbsp;•&nbsp;
-                                    71 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.theguardian.com/science/blog/2018/may/29/why-thousands-of-ai-researchers-are-boycotting-the-new-nature-journal">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=HoppedUpMenace">HoppedUpMenace</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:36:26 &nbsp;•&nbsp;
+                                    137 comments &nbsp;•&nbsp;
                                     406.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17148192">Cool Backgrounds</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160518">Harvard Classics Book Download</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://coolbackgrounds.io/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 20:38:53 &nbsp;•&nbsp;
-                                    50 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.myharvardclassics.com/categories/20120212">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kqr2">kqr2</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 06:18:38 &nbsp;•&nbsp;
+                                    71 comments &nbsp;•&nbsp;
                                     406.0 points
                                 </span>
                             </td>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 22:20:03.983700</strong>
+            <strong>Last update at 2018-05-29 22:30:03.279087</strong>
         </div>
     </div>
 </div>
