--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:42:23 &nbsp;•&nbsp;
                                     10 comments &nbsp;•&nbsp;
-                                    129.0 points
+                                    130.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181624">To Yarn and Back to Npm Again</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
-                                    104.0 points
+                                    <a class="node" href="https://mixmax.com/blog/to-yarn-and-back-again-npm">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=wearhere">wearhere</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:11:56 &nbsp;•&nbsp;
+                                    31 comments &nbsp;•&nbsp;
+                                    105.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 00:30:03.535030</strong>
+            <strong>Last update at 2018-05-30 00:40:03.743427</strong>
         </div>
     </div>
 </div>
