--- a/jobs/index.html
+++ b/jobs/index.html
@@ -144,7 +144,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184080">EasyPost is hiring everyone</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184080">EasyPost is hiring</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 01:10:04.666200</strong>
+            <strong>Last update at 2018-05-30 01:20:03.644673</strong>
         </div>
     </div>
 </div>
