--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:54:35 &nbsp;•&nbsp;
                                     34 comments &nbsp;•&nbsp;
-                                    154.0 points
+                                    155.0 points
                                 </span>
                             </td>
                         </tr>
@@ -534,7 +534,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 17:20:30 &nbsp;•&nbsp;
                                     184 comments &nbsp;•&nbsp;
-                                    140.0 points
+                                    142.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172092">Robust Clojure: The best way to handle nil</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bsima.me/clog/robust-clojure-nil.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ghosthamlet">ghosthamlet</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 12:38:31 &nbsp;•&nbsp;
-                                    83 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
                                     139.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 01:40:04.535160</strong>
+            <strong>Last update at 2018-05-30 01:50:04.048170</strong>
         </div>
     </div>
 </div>
