--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -506,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17183057">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 21:28:00 &nbsp;•&nbsp;
+                                    342 comments &nbsp;•&nbsp;
+                                    225.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172524">Emacs 26.1 released</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -534,26 +554,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=myroon5">myroon5</a></strong> &nbsp;•&nbsp;
                                     2018-05-24 00:37:18 &nbsp;•&nbsp;
                                     211 comments &nbsp;•&nbsp;
-                                    225.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17134531">US Employee in China Suffers Brain Injury in Case Recalling Cuba Sound 'Attack'</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-23/u-s-says-china-employee-hit-with-sound-sensations-brain-injury">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=booleanbetrayal">booleanbetrayal</a></strong> &nbsp;•&nbsp;
-                                    2018-05-23 14:40:17 &nbsp;•&nbsp;
-                                    147 comments &nbsp;•&nbsp;
                                     225.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 05:30:02.998872</strong>
+            <strong>Last update at 2018-05-30 05:40:03.009915</strong>
         </div>
     </div>
 </div>
